--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<div class="menu-container">
 							<ul class="nav navbar-nav">
 								<li class="active"><a href="#">Home</a></li>
-								<li><a href="#">About Us</a></li>
+								<li><a href="about.html">About Us</a></li>
 								<li><a href="#">Services</a></li>
 								<li><a href="#">Gallery</a></li>
 								<li><a href="contact.html">Contact</a></li>
@@ -387,10 +387,10 @@
 						<div class="col-md-3 md-margin-bottom-40">
 							<div class="headline"><h2>Useful Links</h2></div>
 							<ul class="list-unstyled link-list">
-								<li><a href="#">About Us</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="about.html">About Us</a><i class="fa fa-angle-right"></i></li>
 								<li><a href="#">Services</a><i class="fa fa-angle-right"></i></li>
 								<li><a href="#">Gallery</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Contact us</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="contact.html">Contact us</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div>
 						<!-- End Link List -->
