--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
 								Wangsa Melawati, Kuala Lumpur <br />
 								Office: 03-4144 1445 <br />
 								Mobile: 019-233 1787 <br />
-								Email: <a href="mailto:info@anybiz.com" style="color: #72c02c;">tunali7@yahoo.com.my</a>
+								Email: <a href="mailto:tunali7@yahoo.com.my" style="color: #72c02c;">tunali7@yahoo.com.my</a>
 							</address>
 						</div>
 						<!-- End Address -->
